# openSAM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LTAPI.cpp  LTAPI.h  Makefile.common  Makefile.lin64  Makefile.mac64  Makefile.mgw64  Makefile.osxcross  README-CHANGES.md  README.md  XPListBox.cpp  XPListBox.h  adgs_api.cpp  adgs_editor.cpp  adgs_editor.h  adgs_ui.cpp  autodgs_airport.cpp  autodgs_airport.h  autogate_door.cpp  autogate_door.h  build.sh  dgs_variants_generated.h  door_info.h  jwctrl.cpp  jwctrl.h  jwctrl_sound.cpp  jwctrl_sound_xp11.cpp  log_msg.cpp  mk_zip  mk_zip.sh  mpadapter.cpp  mpadapter.h  mpadapter_lt.cpp  mpadapter_lt.h  mpadapter_tgxp.cpp  mpadapter_tgxp.h  mpadapter_xpilot.cpp  mpadapter_xpilot.h  (+61 more)
.github/workflows/: release.yaml
DGS-Safedock-T2-24/: Makefile  SAfedock-T2-24.pbrprj  Safedock-T2-24-display.obj-base  Safedock-T2-24-display.xcf  Safedock-T2-24.blend  Safedock-T2-24.blend1  Safedock-T2-24_NML-RGB.xcf  Safedock-T2-24_NML.xcf  gen_display.py  pole_base.blend
DGS-Safedock-T2-24/assets/: Safedock-T2-24-img.xcf
DGS-Safedock-T2-24/freepik/: source_and_attribution.txt
DGS-Safedock-X/: Makefile  Safedock-X-display.obj-base  Safedock-X-display_LIT.xcf  Safedock-X.blend  Safedock-X.blend1  Safedock-X.pbrprj  Safedock-X.xcf  gen_display.py
DGS-Safedock-X/assets/: Safedock-X-img.xcf
DGS-Safedock-X/reference/: PLANE_4.PNG.DDS
DGSs-Safedock-T2-24/: Makefile  Notes.txt  Safedock-T2-24-pole.obj-base  Safedock-T2-24.blend  Safedock-T2-24.blend1  Safedock-T2-24.obj-base  Safedock-T2-24.xcf  Safedock-T2-24_NML-RGBA.xcf  add_display.py  pole_base.blend1  test_install.sh
DGSs-Safedock-T2-24/vdgstools/: display.py
ImgWindow/: ImgFontAtlas.cpp  ImgWindow.cpp  ImgWindow.h
Makefiles-unmaintained/: Makefile.mac64  version.h.n
cmake/: toolchain-osxcross.cmake
dgs/: 00_README.txt  airport.cpp  airport.h  apt_airport.cpp  apt_airport.h  dgs.cpp  dgs.h  dgs_impl.h  dgs_plane.cpp  marshaller.cpp  plane.cpp  plane.h  safedock_t2_24.cpp  safedock_x.cpp
fragments/: sam_xml_read_docks_from_sam_xml-FRAGMENT.c
imgui/: imconfig.h
openSAM/: 00_README.txt  Credits_and_Licensing.txt  acf_door_position.txt  acf_use_engine_running.txt  library-no_SAM.txt  library.txt
openSAM-pkg/: 00_README.txt  Credits_and_Licensing.txt
openSAM-pkg/lua/: README.txt  openSAM.lua
openSAM-pkg/openSAM/: acf_door_position.txt  acf_generic_type.txt  acf_single_door.txt  acf_use_engine_running.txt  csl_door_position.txt  planes.cfg
openSAM-pkg/openSAM_Library/: library-no_SAM_Library.txt  library-with_SAM_Library.txt  library.txt  sam.xml
openSAM-pkg/openSAM_Library/MisterX/libjw/: Tunnel_Steel_Modern_5m.fac
openSAM-pkg/openSAM_Library/dev-tools/OSJW_openSAM_demo_airport/: sam.xml
openSAM-pkg/openSAM_Library/dgs/: Safedock-T2-24_2.5m_180.agp  Safedock-T2-24_2.5m_pole.agp  Safedock-T2-24_3.0m.agp  Safedock-T2-24_3.0m_pole.agp  Safedock-T2-24_3.0m_pole_180.agp  Safedock-T2-24_3.5m_pole.agp  Safedock-T2-24_4.0m_180.agp  Safedock-T2-24_4.0m_pole.agp  Safedock-T2-24_4.0m_pole_180.agp  Safedock-T2-24_4.5m.agp  Safedock-T2-24_4.5m_180.agp  Safedock-T2-24_5.0m_180.agp  Safedock-T2-24_6.0m_pole_180.agp  Safedock-T2-24_6.5m_180.agp  SafedockT2_2.5m.agp  SafedockT2_2.5m_180.agp  SafedockT2_2.5m_pole_180.agp  SafedockT2_3.0m.agp  SafedockT2_3.0m_180.agp  SafedockT2_3.0m_pole.agp  SafedockT2_3.5m_180.agp  SafedockT2_3.5m_pole.agp  SafedockT2_4.0m_pole.agp  SafedockT2_4.5m.agp  SafedockT2_4.5m_180.agp  SafedockT2_5.0m_180.agp  SafedockT2_5.0m_pole_180.agp  SafedockT2_6.0m_180.agp  SafedockT2_6.5m.agp  SafedockT2_6.5m_180.agp  SafedockT2_7.0m_180.agp  marshaller.agp  marshaller_high.agp
openSAM-pkg/openSAM_Library/zero_config_dgs/: sam.xml
openSAM/dgs/: Marshaller.obj-ok  SafedockT2-6m-180.agp  SafedockT2-6m.agp
release/XP11/: Credits_and_Licensing.txt
release/XP11/openSAM/: README.html  acf_dont_connect_jetway.txt  acf_generic_type.txt  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/XP11/openSAM_Library/: library-with_SAM_Library.txt  library.txt  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_blacklist.txt  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/XP12/: 00_README.txt
release/XP12/openSAM/: acf_door_position.txt  acf_use_engine_running.txt  csl_door_position.txt  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/XP12/openSAM_Library/: 00_README.txt  Credits_and_Licensing.txt  library.txt  libraryjetways.xml  sam.xml  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/openSAM/: acf_generic_type.txt  csl_door_position.txt  planes.cfg  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/openSAM/lin_x64/: openSAM.xpl
release/openSAM/lua/: README.txt  openSAM.lua
release/openSAM/mac_x64/: openSAM.xpl
release/openSAM/resources/: Marshaller_LIT.dds
release/openSAM_Library/: library.txt  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/openSAM_Library/dev-tools/: gen_libjw_from_jw.py  sam.xml
release/openSAM_Library/dgs/: Safedock-T2-24_2.5m.agp  Safedock-T2-24_2.5m_pole_180.agp  Safedock-T2-24_3.0m_180.agp  Safedock-T2-24_3.5m.agp  Safedock-T2-24_3.5m_180.agp  Safedock-T2-24_3.5m_pole_180.agp  Safedock-T2-24_4.0m.agp  Safedock-T2-24_4.5m_pole.agp  Safedock-T2-24_4.5m_pole_180.agp  Safedock-T2-24_5.0m.agp  Safedock-T2-24_5.0m_pole.agp  Safedock-T2-24_5.0m_pole_180.agp  Safedock-T2-24_5.5m.agp  Safedock-T2-24_5.5m_180.agp  Safedock-T2-24_6.0m.agp  Safedock-T2-24_6.0m_180.agp  Safedock-T2-24_6.0m_pole.agp  Safedock-T2-24_6.5m.agp  Safedock-T2-24_7.0m.agp  Safedock-T2-24_7.0m_180.agp
tools/: TOOLS.txt  gen_height_variants.py  gen_resources.py  indent_anim.py
tools/vdgstools/: display.py
(+71 files in other folders)
